--- a/دیو_جانس_کلبی.mw
+++ b/دیو_جانس_کلبی.mw
@@ -43,6 +43,7 @@
 [[he:דיוגנס]]
 [[hr:Diogen]]
 [[hu:Szinópéi Diogenész]]
+[[id:Diogenes Sinope]]
 [[it:Diogene di Sinope]]
 [[ja:ディオゲネス (犬儒学派)]]
 [[la:Diogenes Cynicus]]
