*Empty MediaWiki Message*

--- a/ايران.mw
+++ b/ايران.mw
@@ -24,7 +24,7 @@
 |population_estimate = 68,017,860 
 |د وګړو د شمېر د اټکل کال = 2005 
 |population_estimate_rank = 18th 
-|د وګړو سرشمېرنه = N/A 
+|د وګړو سرشمېرنه = 71.208.000 <small>(2007<ref>http://www.un.org/esa/population/publications/wpp2007/WPP2007%20web/Countries/Iran%20(Islamic%20Republic%20of)/demographic.xml</ref>)</small> 
 |د وګړو د سرشمېرنې کال = 2000 
 |د وګړو ګڼه ګونه = 41
 |population_densitymi² =106 <!-- Do not remove per [[WP:MOSNUM]] -->
