/* د نامتو برزګانو زيارتونه */

--- a/هرات_ولايت.mw
+++ b/هرات_ولايت.mw
@@ -56,7 +56,7 @@
 **[[فرسي ولسوالي]]
 ** [[چشت شريف ولسوالي]]
 
-== د نامتو برزګانو زيارتونه ==
+== د نامتو بزرګانو زيارتونه ==
 
 هرات ولايت په ځينو ليكنو كې د اولياؤ په خاوره يادېږي. دا لرغوونې ولايت يو وخت د پوهې او فرهنګ مركز ؤ، د وخت نامتو پوهان په همدې ولايت كې زوكړي دي او همدلته روزل شوي. په لاندې ډول د ځينو نامتو اولياؤ نومونه يادوو:
 *[[د هرات پير (خواجه عبدالله انصاري]]
