robot  Modifying: [[fa:محمد بن موسی خوارزمی]]

--- a/محمد_بن_موسی_خوارزمي.mw
+++ b/محمد_بن_موسی_خوارزمي.mw
@@ -172,7 +172,7 @@ He also wrote two books on using and constructing [[astrolabe]]s. [[Ibn al-Nadim
 [[eo:Al-Ĥorezmi]]
 [[es:Al Juarismi]]
 [[eu:Muhammad ibn Musa al-Khwarizmi]]
-[[fa:محمد ابن موسی خوارزمی]]
+[[fa:محمد بن موسی خوارزمی]]
 [[fi:Al-Khwarizmi]]
 [[fiu-vro:Al-Horazmi]]
 [[fr:Al-Khawarizmi (Mohamed Ibn Mussa)]]
