--- a/انسلم.mw
+++ b/انسلم.mw
@@ -10,40 +10,42 @@
 
 [[category:لوديځ فيلسفوفان]]
 [[category:فلسفه]]
+
 [[az:Kenterberili Anselm]]
-[[bs:Anselmo Kenterberijski]]
 [[bg:Анселм Кентърбърийски]]
+[[bs:Anselmo Kenterberijski]]
 [[ca:Anselm de Canterbury]]
 [[cs:Anselm z Canterbury]]
 [[da:Anselm af Canterbury]]
 [[de:Anselm von Canterbury]]
+[[el:Άνσελμος του Καντέρμπερι]]
 [[en:Anselm of Canterbury]]
 [[es:Anselmo de Canterbury]]
 [[fa:انسلم]]
+[[fi:Anselm Canterburylainen]]
 [[fr:Anselme de Cantorbéry]]
 [[gl:Anselmo de Canterbury]]
-[[ko:안셀무스]]
+[[he:אנסלם מקנטרברי]]
+[[hu:Canterburyi Szent Anzelm]]
 [[id:Anselmus]]
 [[it:Anselmo d'Aosta]]
-[[he:אנסלם מקנטרברי]]
+[[ja:アンセルムス]]
 [[ka:ანსელმ კენტერბერიელი]]
-[[sw:Anselm wa Canterbury]]
+[[ko:안셀무스]]
 [[la:Anselmus Cantuariensis]]
 [[lt:Anzelmas Kenterberietis]]
-[[hu:Canterburyi Szent Anzelm]]
 [[nl:Anselmus van Canterbury]]
-[[ja:アンセルムス]]
 [[no:Anselm av Canterbury]]
-[[pms:Anselm d'Osta]]
 [[pl:Anzelm z Canterbury]]
+[[pms:Anselm d'Osta]]
 [[pt:Anselmo de Cantuária]]
 [[ro:Anselm de Canterbury]]
 [[ru:Ансельм Кентерберийский]]
-[[sq:Anselmi i Aostës]]
 [[sk:Anselm z Canterbury]]
+[[sq:Anselmi i Aostës]]
 [[sr:Анселмо Кантерберијски]]
-[[fi:Anselm Canterburylainen]]
 [[sv:Anselm av Canterbury]]
+[[sw:Anselm wa Canterbury]]
 [[th:แอนเซลมแห่งแคนเตอร์บรี]]
 [[uk:Ансельм Кентерберійський]]
 [[wa:Sint Ansele di Cantorbereye]]
