robot  Modifying: [[bn:বাদাখশন প্রদেশ]]

--- a/بدخشان_ولايت.mw
+++ b/بدخشان_ولايت.mw
@@ -46,7 +46,7 @@
 
 [[ar:ولاية بدخشان]]
 [[ast:Badajshán]]
-[[bn:বাদাখশান প্রদেশ]]
+[[bn:বাদাখশন প্রদেশ]]
 [[cy:Badakhshan (talaith)]]
 [[de:Badakhshan]]
 [[en:Badakhshan Province]]
