robot  Modifying: [[jbo:Belgique]]

--- a/بېلجیم.mw
+++ b/بېلجیم.mw
@@ -299,7 +299,7 @@ Many highly ranked restaurants can be found in the high-impact gastronomic guide
 [[is:Belgía]]
 [[it:Belgio]]
 [[ja:ベルギー]]
-[[jbo:beljik]]
+[[jbo:Belgique]]
 [[jv:Bèlgia]]
 [[ka:ბელგია]]
 [[kab:Biljik]]
