robot  Modifying: [[jbo:Malta]]

--- a/مالټا.mw
+++ b/مالټا.mw
@@ -362,7 +362,7 @@ This article has been created by making reference to the following:
 [[is:Malta]]
 [[it:Malta]]
 [[ja:マルタ]]
-[[jbo:maltas]]
+[[jbo:Malta]]
 [[jv:Malta]]
 [[ka:მალტა]]
 [[kk:Малта]]
