*Empty MediaWiki Message*

--- a/ابي_نصر_الفارابي.mw
+++ b/ابي_نصر_الفارابي.mw
@@ -98,6 +98,8 @@
 ۹) رساله فی السیاسه (رساله‌ای در سیاست): فارابی درباره سیاست صحبت می‌کند.
 ۱۰) فصول الحکم (د حكمت بېلوونكي): دا كتاب د الهي حكمت په اړه دى، او ۷۴ بحثونه لري او له اروا څخه هم غږېدلې.
 
+ليكنه: عثمان منصور انصاري
+
 == اخځليكونه ==
 
 ** فلسفه، ليكوال: [[محمد نادر ايوبي]] (كندهارې)، ۱۴۲۶هجري لمريز كال، صحاف نشراتي مؤسسه- كوټه
