robot  Modifying: [[ru:Гор (провинция, Афганистан)]]

--- a/غور_ولايت.mw
+++ b/غور_ولايت.mw
@@ -106,7 +106,7 @@
 [[no:Ghowr (provins)]]
 [[pl:Ghor (prowincja)]]
 [[pt:Ghowr (província)]]
-[[ru:Гор (провинция в Афганистане)]]
+[[ru:Гор (провинция, Афганистан)]]
 [[sv:Ghor]]
 [[tg:Вилояти Ғувр]]
 [[zh:古爾省]]
