--- a/عاج_ساحل.mw
+++ b/عاج_ساحل.mw
@@ -210,10 +210,10 @@ Fil Dişi Sahil
 [[bpy:কটে ডি'আইভরি]]
 [[br:Aod an Olifant]]
 [[bs:Obala Slonovače]]
-[[ca:Costa d'Ivori]]
+[[ca:Côte d'Ivoire]]
 [[ceb:Cote d'Ivoire]]
 [[crh:Filtiş Yalısı]]
-[[cs:Pobřeží slonoviny]]
+[[cs:Côte d'Ivoire]]
 [[cy:Côte d'Ivoire]]
 [[da:Elfenbenskysten]]
 [[de:Elfenbeinküste]]
@@ -239,7 +239,7 @@ Fil Dişi Sahil
 [[hi:कोटे ड आईवोर]]
 [[hr:Obala Bjelokosti]]
 [[ht:Kòt divwa]]
-[[hu:Elefántcsontpart]]
+[[hu:Côte d'Ivoire]]
 [[hy:Կոտ դ'Իվուար]]
 [[ia:Costa de Ebore]]
 [[id:Pantai Gading]]
@@ -268,7 +268,7 @@ Fil Dişi Sahil
 [[na:Aibori Kot]]
 [[nah:Côte d'Ivoire]]
 [[nds:Elfenbeenküst]]
-[[nl:Ivoorkust]]
+[[nl:Côte d'Ivoire]]
 [[nn:Elfenbeinskysten]]
 [[no:Elfenbenskysten]]
 [[nov:Côte d'Ivoire]]
@@ -279,7 +279,7 @@ Fil Dişi Sahil
 [[pms:Còsta d'Avòri]]
 [[pt:Costa do Marfim]]
 [[qu:Marphil Chala]]
-[[ro:Coasta de Fildeş]]
+[[ro:Côte d'Ivoire]]
 [[ru:Кот-д’Ивуар]]
 [[scn:Costa d'Avoriu]]
 [[se:Elfenbenariddu]]
@@ -297,7 +297,7 @@ Fil Dişi Sahil
 [[tg:Кот-д'Ивуар]]
 [[th:ประเทศโกตดิวัวร์]]
 [[tl:Côte d’Ivoire]]
-[[tr:Fildişi Sahili]]
+[[tr:Côte d'Ivoire]]
 [[uk:Кот-д'Івуар]]
 [[ur:کوت داوواغ]]
 [[uz:Fil Suyak Sohili]]
