--- a/افغانستان.mw
+++ b/افغانستان.mw
@@ -589,6 +589,7 @@ Teb Medical megaziene (jalalabad)
 [[ko:아프가니스탄]]
 [[ku:Afxanistan]]
 [[kw:Afghanistan]]
+[[ky:Афганистан]]
 [[la:Afgania]]
 [[lb:Afghanistan]]
 [[li:Afganistan]]
