The file [[:Image:Italian_coa.png]] has been replaced by [[:Image:Italy-Emblem.svg]] by administrator [[:commons:User:Siebrand]]: ''Unfree (Vector-Images.com) image replaced by free alternative''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/اېټاليا.mw
+++ b/اېټاليا.mw
@@ -2,7 +2,7 @@
 |اصلي نوم = Repubblica Italiana<br>د اټاليا جمهوريت
 |عام نوم =Italy 
 |بېرغ = Flag of Italy.svg
-|نښان = Italian coa.png
+|نښان =Italy-Emblem.svg
 |نخشه = LocationItaly.png
 |national_motto = None
 |ملي سرود = ''[[Il Canto degli Italiani]]''
