*Empty MediaWiki Message*

--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -1,5 +1,4 @@
 
-
 “تهافت الفلاسفه” او “تهافت التهافه”
 “تهافت الفلاسفه” او تهافت التهافت د مسلمانې فلسفې له ځانګړو او مهمو كتابونو څخه ګڼل كېږي. لدې دواړو څخه لومړې “تهافت الفلاسفه”، چې د ابو حامد محمد بن محمد الغزالي ليكلې كتاب دى. ددې (“تهافت الفلاسفه”) او (احياء علوم الدين) كتابونو له وجې غزالي ته دده انصارو او مريدانو د امام او حجة الاسلام لقب وركړ. او دا ځكه چې ده خپل ځآن د اسلامي ګروهو او شريعت څخه د ننګې لپاره وقف كړې و، او د ټولو فيلسوفانو او دهغوي د فلسفې مقابله وكړه، چې د يونان (چاته چې د يونان لرغووني ويل كېږي) څخه نيولې تر ابن سينا پورې (چې د غزالي تر پيره ددې كړۍ وروستې فيلسوف پېژندل كېږي) تېر شوي دي.
 “تهافت التهافه” د غزالي د “تهافت الفلاسفه” په رد كې تقريبا ۱۰۰ كاله وروسته د ابن رشد اندلسي لخوا كښل شوې. د فلسفې او فيلسوفانو سره د ابن رشد هماغه اړيكه وه، كومه چې د غزالي له شريعت سره وه، يانې ده خپل ژوند د فيلسوفانو په ننګه او مدافعت (چې د يونان له لومړي پير څخه تر خپل پير پورې تېر شوې دى) لپاره وقف كړې و.
@@ -51,3 +50,7 @@
 19)	 د هغوي دا وينا چې د بشري نفس پنا كېدل ناشونې دى.
 20)	 له بيا راژوندي كېدو، د اجساتو د حسر او د جنت و دوزخ جسماني خوندونو او ربړونو څخه د دوي انكار...
 كه چېرې څوك په ژور نظ سره ددې مباحثو مطالعه وكړي، نو دا خبره به ورته ښه روښانه شي، چې دا شل مسئلې د اسلامي ډلو ټپلو او نورو مذهبونو په ټولو طبعي او الهياتي علومو مشتمل دي، كه هغه لرغونې علوم دي يا اوسني، د يو څو مسئلو څخه پرته چې د هغې منل به د مفكرينو د ناپوهۍ سره برابر ه وي، لكه د ۱۴، ۱۵، او ۱۶مې مسئلې.
+
+
+==سرچينې==
+ليك او ژباړه: عثمان منصور انصاري
