*Empty MediaWiki Message*

--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -1,56 +1,65 @@
 
-“تهافت الفلاسفه” او “تهافت التهافه”
 “تهافت الفلاسفه” او تهافت التهافت د مسلمانې فلسفې له ځانګړو او مهمو كتابونو څخه ګڼل كېږي. لدې دواړو څخه لومړې “تهافت الفلاسفه”، چې د ابو حامد محمد بن محمد الغزالي ليكلې كتاب دى. ددې (“تهافت الفلاسفه”) او (احياء علوم الدين) كتابونو له وجې غزالي ته دده انصارو او مريدانو د امام او حجة الاسلام لقب وركړ. او دا ځكه چې ده خپل ځآن د اسلامي ګروهو او شريعت څخه د ننګې لپاره وقف كړې و، او د ټولو فيلسوفانو او دهغوي د فلسفې مقابله وكړه، چې د يونان (چاته چې د يونان لرغووني ويل كېږي) څخه نيولې تر ابن سينا پورې (چې د غزالي تر پيره ددې كړۍ وروستې فيلسوف پېژندل كېږي) تېر شوي دي.
+
 “تهافت التهافه” د غزالي د “تهافت الفلاسفه” په رد كې تقريبا ۱۰۰ كاله وروسته د ابن رشد اندلسي لخوا كښل شوې. د فلسفې او فيلسوفانو سره د ابن رشد هماغه اړيكه وه، كومه چې د غزالي له شريعت سره وه، يانې ده خپل ژوند د فيلسوفانو په ننګه او مدافعت (چې د يونان له لومړي پير څخه تر خپل پير پورې تېر شوې دى) لپاره وقف كړې و.
 د غزالي مړينه د شپږمې پيړۍ په سر كې وشوه، او د ابن رشد هغه د پېړۍ په وروستۍ لسيزه كې. نو پدې توګه دده لپاره د “حجۀ الحكمۀ و الحكماء” لقب يو وړ لقب دى، لكه څرنګه چې د غزالي ته حجۀ الاسلام ويل كېږي، ځكه چې د “تهافت الفلاسفه” كتاب پوره يوه پېړۍ په فلسفه او فكري آزادى باندې پرله پسې بريدونه كړي. د پوهانو عقلونه يې كمزورې ګڼلي، هغوي يې رټل شوي د دوزخ د اور وړ ګرځولي، او د دارنګه يې د مخلوق د بدګومانۍ او د خالق د غضب نښه ګرځولئ. د ختيز او لوديز هېڅ يو فيلسوف ددې كتاب ترديد ندې كړې، او نه يې هم ددې كتاب ځينې تورونه چې د فلسفې لپاره د ذلت او رسوايۍ لامل ګرځېدلې ناسم ګڼلي وي. 
 ابن رشد پدې كتاب تنقيد كولو سره د خپلو په فلسفه مينو اسلافو، ښوونكو، زده كوونكو او نورو مينه والو څخه دا داغ لرې كړ، چې نور له ده څخه مخكې نور فلاسفه پكې پاتې راغلي ول.
+
 ابن رشد فلسفه كې يو ځل بيا نوې روح پوه كړ او د هغې شان و شوكت او ښكلا يې بيا را ژوندې كړه. حال دا چې غزالي يې زړه زخمي او روح فرسوده كړې و.
+
 په “تهافت الفلاسفه” باندې له يوې لنډې سريزې وړاندې كولو څخه وروسته، چې دې كتاب د نوم او د هغې د ليكنې لامل به روښانه كړي، د تهافت التهافت په اړه د خپلو خيلاتو اظهار وكړو.
 د كتاب نوم او موخې يې غزالي وايي: (ما ددې كتاب پيلامه پدې موخه كړې ترڅو ددې په وسيله د لرغونو فيلسوفانو ترديد وشي او د هغوي د ګروهو كمزوري او د الهياتو كې د هغوي د خيالاتو تناقض روښانه شي. دارنګه د هغوي د مذهب نيمګړتياو او د هغې د خندا وړ او د هوښيارانو لپاره د عبرت نښۀ ده، زما موخه ددوي له هغو مختلفو ګروهو او خيالاتو څخه ده، د كومو له وجې چې فيلسوفان له نور ولس څخه بيل او ځانګړې كوي.)
 لرغوني فيلسوفان او ددې كتاب له ليكنې څخه د غزالي موخه
 د غزالي اصول دا دي، چې د فيلسوفانو د مذهب تشرېح بعينه وكړاى شي، ترڅو تقليد پرستو ملحدينو ته دا مالومه شي، چې په لومړيو او وروستيو كې چې كوم نامتو كسان تېر شوي، هغوي ټول پر څښتن او د آخرت پر ورځ ايمان درلود.
-د “تهافت الفلاسفه” د ليكول لامل
+
+
+== د “تهافت الفلاسفه” د ليكول لامل ==
 غزالي داسې وايي، چې ده يوه داسې  ډله ليدلې چې په خپلو هم پېرو (هم عصرو) يې د زكاوت او هوښيارۍ له وجې غوره والې او امتيار ترلاسه كړې و. دوي له اسلامي ډلو سره كوم تړاو نه درلود، نه يې له عبادت سره كوم سروكار و. دوي به د اسلامي شعايرو سپكاوې كاوه او د اسلامي شريعت له ټولو قيوداتو څخه خپلواكي ترلاسه كړې وه. 
+
 د دوي د كفر لامل يواځې همدا و، چې د دوي په غوږونو كې يو څو بې ګټې خبرې لويدلې وى. دوي د سكرات (سقرات)، بكرات (بقرات)، اپلاتون (افلاتون)، ارستو او داسې نورو وېروونكي نومونه اورېدلي ول، او دارنګه ددوي د لارويانو په وسيله دوي ته د هغو فيلسوفانو د عقلونو پېژندنه او د هغوي مختلف علوم لكه، هندسه، منطق، طبيعيات، الهياتو كې د تبحر او د هغوي د هوښيارۍ د كمال په اړه ډېر څه مالومات ترلاسه كړې وه.... او دا هم مالومه شوه، چې دا خلك د خپلې پوره پوهې او لوړوالي سره، سره له مذهب او شريعت څخه منكر ول او د مذهب د تفصيلي امورو مننونكي ندي. د دوي (فيلسوفانو) په خيال چې دا ټول شريعتونه د انسان پنځونې دي، او يواځې د دروغو او چل دوكې ټولګه ده.
-د ارستو په فلسفه بسيا كول
+
+
+== د ارستو په فلسفه بسيا كول ==
 غزالي په لومړي سر كې ويلي چې دې يواځې د هغه فيلسوف د راى د تناقض په اظهار بسيا كوي، څوك چې د ټولو فيلسوفانو  سرلارې فيلسوف او لومړې ښوونكې (ارستو) دى، ځكه چې د فيلسوفانو په خيال ده د دوي ټول علوم ترتيب كړل، او دوي په خيالاتو كې يې چاڼ وكړ...
 آن تردې چې د خپل ښوونكي ترديد يې هم څوك چې ده د (“الهي اپلاتون” په لقب نازولې و. مګر رښتيا خبره دا ده، چې غزالي يواځې په ارستو بسيا نده كړې، لكه څرنګه چې دې دعوه كوي، بلكه د ټولو فيلسوفانو خيالات يې هم..........
 
-د فيلسوفانو علوم
+
+== د فيلسوفانو علوم ==
 غزالي ليكي: (دده “غزالي” قانوني بحب به د الهياتو مسائلو پورې محدود وي، ځكه چې د هندسي او مطق علومو كې د تنقيد ځاى نه وي، فيلسوفانو د حسابي او منطقي علومو په رڼا كې د خپلو الهي علومو په صداقت استدلال كړې، او ددې دلايلو په وسيله يې كمزوري عقل خاوندانو ته دوكه وركړې.
 كه چېرې د دوي د حسابي او منطقي علومو په څېر د دوي الهي علوم دلايل هم پرېكنده او د منلو وړ واى، نو پدې علومو كې به دده (غزالي) هېڅ اختلاف نه واى، لكه څرنګه چې په حسابي علومو كې دوي كوم اختلاف ندې كړې.
 په طبعي ډول د غزالي ددې مسئلو ترديد نشو كوالى، ځكه چې هغه د حسابي او منطقي علومو سموالې منلو.
 
-د اسلام فيلسوفان
+
+== د اسلام فيلسوفان ==
 غزالي وايي: د ارستو د كتابونو شنونكو چې خپلې كومې خبرې وړاندې كړي، هغه د لاسوهنو او تبديليو څخه خالي ندي. ددې تشرېح او تاويل اړين برېښي، ځكه چې له دې څخه هم خلمنځي اختلافات رامنځته شوې دي.
 په اسلامي فيلسوفانو كې د نقل او څېړنې له مخې له ټولو څخه غوره ابونصر فارابي او ابن سينا دي. دلته موږ د دوي لاروركو  ائمه و د مذهب هغه څه چې دوي خپل كړي، او سم يې ګڼلي د هغې په ترديد بسيا كوو. پدې توګه موږ دلته د فيلسوفانو تريدي يواځې د همدې ژباړونكو (فارابي او ابن سينا) د شرحو له لحاظه كوو:
 
-د غزالي شل مسئلې
+
+== د غزالي شل مسئلې ==
 
 د هغو شلو (۲۰) مسئلو تشرېح كومو كې چې غزالي د فيلسوفانو تناقض ښكاره كړې دى:
 
-1)	د عالم ازليت په اړه د فيلسوفانو مذهب
-2)	د عالم ابديت (تلوالي) په اړه .......
-3)	د دوي دا وينا، چې څښتن تعالى د عالم پينځوونكې دى او عالم د هغه پنځونه ه.
-4)	د پنځوونكي په زباتونه كې د دوي پاتې راتلل.
-5)	د دوه څښتنانو په محال والي باندې د دليل راوړلو كې پاتې راتلل.
-6)	د څښتن تعالى د صفاتو د نفې په اړه د لوى مذهب...
-7)	د دوي دا وينا چې لومړى (څښتن تعالى) ذات په جنس او فصل نه ويشل كېږي.
-8)	د دوي دا قول چې لومړې يوه بسيطه هستي ده، د كومې هستۍ چې ماهيت نشته.
-9)	د لومړي په غېر جسماني زباتونه كې د دوي پاتې راتلل. 
-10)	 د هريت عقيده او د پنځوونكي د وجود نفې د فيلسوفانو د مذهب لازمي جز دى.
-11)	 ددې خبرې (امر) په زباتولو كې پاتې راتلل چې د عالم پنځوونكې د خپل ځان په اړه مالومات لري.
-12)	د هغه دا قول چې لومړې (څښتن تعالى) ته د جزياتو په اړه مالومات شته.
-13)	 د هغوي دا وينا چې اسمان يوه خوځنده بې ارادې حيوان دى.
-14)	...
-15)	...
-16)	....
-17)	د هغوي دا وينا چې خارق العادۀ ( د عادت خلاف كار) ناشونې دى.
-18)	د هغوي د خپلې ددې وينا د كوم عقلي دليل په راوړلو كې پاتې راتلل، چې وايي نفس په خپل ځان قايم جوهر دى، نه جسم دى او نه جوهر دى.
-19)	 د هغوي دا وينا چې د بشري نفس پنا كېدل ناشونې دى.
-20)	 له بيا راژوندي كېدو، د اجساتو د حسر او د جنت و دوزخ جسماني خوندونو او ربړونو څخه د دوي انكار...
+*1)	د عالم ازليت په اړه د فيلسوفانو مذهب
+*2)	د عالم ابديت (تلوالي) په اړه .......
+*3)	د دوي دا وينا، چې څښتن تعالى د عالم پينځوونكې دى او عالم د هغه پنځونه ه.
+*4)	د پنځوونكي په زباتونه كې د دوي پاتې راتلل.
+*5)	د دوه څښتنانو په محال والي باندې د دليل راوړلو كې پاتې راتلل.
+*6)	د څښتن تعالى د صفاتو د نفې په اړه د لوى مذهب...
+*7)	د دوي دا وينا چې لومړى (څښتن تعالى) ذات په جنس او فصل نه ويشل كېږي.
+*8)	د دوي دا قول چې لومړې يوه بسيطه هستي ده، د كومې هستۍ چې ماهيت نشته.
+*9)	د لومړي په غېر جسماني زباتونه كې د دوي پاتې راتلل. 
+*10)	 د هريت عقيده او د پنځوونكي د وجود نفې د فيلسوفانو د مذهب لازمي جز دى.
+*11)	 ددې خبرې (امر) په زباتولو كې پاتې راتلل چې د عالم پنځوونكې د خپل ځان په اړه مالومات لري.
+*12)	د هغه دا قول چې لومړې (څښتن تعالى) ته د جزياتو په اړه مالومات شته.
+*13)	 د هغوي دا وينا چې اسمان يوه خوځنده بې ارادې حيوان دى.
+*14)	...
+*15)	...
+*16)	....
+*17)	د هغوي دا وينا چې خارق العادۀ ( د عادت خلاف كار) ناشونې دى.
+*18)	د هغوي د خپلې ددې وينا د كوم عقلي دليل په راوړلو كې پاتې راتلل، چې وايي نفس په خپل ځان قايم جوهر دى، نه جسم دى او نه جوهر دى.
+*19)	 د هغوي دا وينا چې د بشري نفس پنا كېدل ناشونې دى.
+*20)	 له بيا راژوندي كېدو، د اجساتو د حسر او د جنت و دوزخ جسماني خوندونو او ربړونو څخه د دوي انكار...
 كه چېرې څوك په ژور نظ سره ددې مباحثو مطالعه وكړي، نو دا خبره به ورته ښه روښانه شي، چې دا شل مسئلې د اسلامي ډلو ټپلو او نورو مذهبونو په ټولو طبعي او الهياتي علومو مشتمل دي، كه هغه لرغونې علوم دي يا اوسني، د يو څو مسئلو څخه پرته چې د هغې منل به د مفكرينو د ناپوهۍ سره برابر ه وي، لكه د ۱۴، ۱۵، او ۱۶مې مسئلې.
-
 
 ==سرچينې==
 ليك او ژباړه: عثمان منصور انصاري
