--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -62,3 +62,7 @@
 
 ==سرچينې==
 ليك او ژباړه: عثمان منصور انصاري
+[[category: فلسفه]]
+[[category: اسلامي فلسفه]]
+[[category: خيتزه فلسفه]]
+[[category: د اسلامي فلسفې لرغوني كتابپېژندنه]]
