--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -60,8 +60,13 @@
 *20)	 له بيا راژوندي كېدو، د اجساتو د حسر او د جنت و دوزخ جسماني خوندونو او ربړونو څخه د دوي انكار...
 كه چېرې څوك په ژور نظ سره ددې مباحثو مطالعه وكړي، نو دا خبره به ورته ښه روښانه شي، چې دا شل مسئلې د اسلامي ډلو ټپلو او نورو مذهبونو په ټولو طبعي او الهياتي علومو مشتمل دي، كه هغه لرغونې علوم دي يا اوسني، د يو څو مسئلو څخه پرته چې د هغې منل به د مفكرينو د ناپوهۍ سره برابر ه وي، لكه د ۱۴، ۱۵، او ۱۶مې مسئلې.
 
+ليك او ژباړه: '''عثمان منصور انصاري'''
+--[[کارونکی:JALALKUT|انصاري]] 21:37, 27 اکتوبر 2008 (UTC)
+
 ==سرچينې==
-ليك او ژباړه: عثمان منصور انصاري
+** تاريخ فلاسفة الاسلام، ليكوال: ډاكټر محمد لطفي جمعة.
+
+
 [[category: فلسفه]]
 [[category: اسلامي فلسفه]]
 [[category: خيتزه فلسفه]]
