*Empty MediaWiki Message*

--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -1,4 +1,4 @@
-[[انځور:انځور:Ibn rushd1.jpg]]
+[[انځور:Ibn rushd1.jpg]]
 '''“تهافت الفلاسفه”''' او تهافت التهافت د مسلمانې فلسفې له ځانګړو او مهمو كتابونو څخه ګڼل كېږي. لدې دواړو څخه لومړې “تهافت الفلاسفه”، چې د ابو حامد محمد بن محمد الغزالي ليكلې كتاب دى. ددې (“تهافت الفلاسفه”) او (احياء علوم الدين) كتابونو له وجې غزالي ته دده انصارو او مريدانو د امام او حجة الاسلام لقب وركړ. او دا ځكه چې ده خپل ځآن د اسلامي ګروهو او شريعت څخه د ننګې لپاره وقف كړې و، او د ټولو فيلسوفانو او دهغوي د فلسفې مقابله وكړه، چې د يونان (چاته چې د يونان لرغووني ويل كېږي) څخه نيولې تر ابن سينا پورې (چې د غزالي تر پيره ددې كړۍ وروستې فيلسوف پېژندل كېږي) تېر شوي دي.
 
 “تهافت التهافه” د غزالي د “تهافت الفلاسفه” په رد كې تقريبا ۱۰۰ كاله وروسته د [[ابن رشد]] اندلسي لخوا كښل شوې. د فلسفې او فيلسوفانو سره د [[ابن رشد]] هماغه اړيكه وه، كومه چې د غزالي له شريعت سره وه، يانې ده خپل ژوند د فيلسوفانو په ننګه او مدافعت (چې د يونان له لومړي پير څخه تر خپل پير پورې تېر شوې دى) لپاره وقف كړې و.
