--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -21,6 +21,29 @@
 *او شخصیت اصلی فیلم "سرنوشت" به کارگردانی یوسف شاهین است.
 *سیارکی در آسمان به نام او "۸۳۱۸ ابن رشد" نام‌گذاری شده است.
 
+==مهم كتابونه يې: ==
+ 
+
+* د [[ارستو]] د كتابونو شرحې او لنډيزونه:
+{|border=0
+|
+* [[د ما بعد الطبيعة كتاب شرحه او لنډيز]] (ال[[ميتافيزياء]]).
+* [[د البرهان يا الأورغنون د كتاب شرحه او لنډيز]].
+* [[د المقولات شرحه]] ([[قاطيفورياس]]).
+* [[تلخيص كتاب الأخلاق]].
+* [[د السماع الطبيعي كتاب لنډيز]].
+* [[شرح كتاب النفس]].
+* [[د كتاب القياس شرحه]].
+|
+
+او د مهمو ليكنو څخه يې يو څو په لاندې ټول دي:
+* [[مقالة في العقل]].
+* [[مقالة في القياس]].
+* [[مقالة في اتصال العقل المفارق بالإنسان]].
+* [[مقالة في حركة الفلك]].
+* [[مقالة في القياس الشرطي]].
+|
+
 == سرچینې ==
 [http://www.persianbook.net/structure/viewpoint.php?bid=59&start=160 آی کتاب] (برداشت آزاد)
 
