/* مهم كتابونه يې: */

--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -23,7 +23,6 @@
 
 ==مهم كتابونه يې: ==
  
-
 * د [[ارستو]] د كتابونو شرحې او لنډيزونه:
 {|border=0
 |
@@ -43,6 +42,19 @@
 * [[مقالة في حركة الفلك]].
 * [[مقالة في القياس الشرطي]].
 |
+==نور مشهور كتابونه يې:==
+* [[كتاب مناهج الأدلة]] ، چې د فقهې او د كلام علم څخه بحث كوي.
+* [http://ar.wikisource.org/wiki/%D8%A7%D8%A8%D9%86_%D8%B1%D8%B4%D8%AF_-_%D9%81%D8%B5%D9%84_%D8%A7%D9%84%D9%85%D9%82%D8%A7%D9%84 كتاب فصل المقال فيما بين الحكمة و الشريعة من الاتصال] ، وهو من المصنفات الفقهية والكلامية.
+* د [[تهافت التهافت]] كتب، چې د ابن رشد لخوا د [غزالي]] د [[تهافت الفلاسفة]] كتاب په رد كې ليكل شوې.
+|}
+* كتاب الكليات. 
+* كتاب "التحصيل" د علماو د مذهبونو د اختلاف په اړه.
+* كتاب "الحيوان". 
+* كتاب "المسائل" په فلسفه كې.
+* كتاب "بداية المجتهد ونهاية المقتصد" په فقه كې. 
+* كتاب "جوامع كتب أرسطاطاليس" په طبيعياتو او الهياتو كې.
+* كتاب "شرح أرجوزة ابن سينا" په رنځپوهنه كې.‏
+‏
 
 == سرچینې ==
 [http://www.persianbook.net/structure/viewpoint.php?bid=59&start=160 آی کتاب] (برداشت آزاد)
