robot  Adding: [[az:Ensiklopediya]]

--- a/پوهنغونډ.mw
+++ b/پوهنغونډ.mw
@@ -163,6 +163,7 @@ CD-ROM and Internet-based encyclopedias also offer greater search abilities than
 [[an:Enziclopedia]]
 [[ang:Wīsdōmbōc]]
 [[ar:موسوعة]]
+[[az:Ensiklopediya]]
 [[bar:Enzyklopädie]]
 [[be:Энцыклапедыя]]
 [[be-x-old:Энцыкляпэдыя]]
