/* له مړينې وروسته اغیزې */

--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -12,14 +12,14 @@
 په هره توگه  ابن رشد په نړیوال کچه کی یوه  نامتو او مشهور فیلسوف دی . د جرمنی مشهور لیکوال (دانته) په  خپل نومیالی کتاب کی چی د ( الهی کمدی ) په نا مه مشهور دی ابن رشد نه په ډېره درناوی سره یا دونه کړی دی . او همدا رنگه د غربی هیوا دونو نومیالی نقاشان د هغوی لرغونی  انځورونه جوړرکړی دی . چی دوه  انځورونه یی  هم دلته راوستل سوی دی . سربیره پر دا د هغوی د ژوند په باب ډېر کتا بونه او ناولی لیکل سوی دی او شاهین یوسف د هغوی د ژوند سینمایی فیلم هم جوړرکړی دی . په 8318 عیسوی کال کی  په اسمان کی یوه کوچنی سیاره هم د دوی په نوم باندی  نوماند سو . ( مهندس داود عطایی قندهاری )
 
 == له مړينې وروسته اغیزې ==
-[[انځور:Averroes closeup.jpg|thumb|فرسک [[مدرسه آتن]] اثر [[رافائل]]،بخشی از اثر  که ابن رشد در آن حضور دارد]]
-*مجسمه‌ای از ابن رشد هنوز در کوردوبا، اسپانیا قرار دارد.
-*[[رافائل]]، نقاش شهیر ایتالیایی، تصویرش را در یکی از نقاشی‌هایش آورده است.
-*دانته در کتاب معروف خود، "کمدی الهی"، به او اشاره می‌کند.
-*خورخه لوئیس بورخس داستان کوتاهی با نام "جستجوی ابن رشد" نوشته است که در مورد جستجوی او برای کشف معانی تراژدی و کمدی است.
-*جیمز جویس در کتاب مشهور خود، [[اولیس]]، مختصرا به او اشاره می‌کند.
+[[انځور:Averroes closeup.jpg|thumb|فرسک [[د آتن ښوونځې]] د [[رافائل]] اثر، د انځور هغه برخه چې ابن رشد پكې شتون لري]]
+*د ابن رشد مجسمه تر نن ورځې پورې د اسپانيا په كرتبې (قرتبه)‌ ښار كې شته.
+*[[رافائل]]، د اېټاليې نامتو انځورګر ابن سينا په خپلو انځورونو كې انځور كړې.
+*دانته په خپل مشهور كتاب "الهی كامډي" كې ده ته اشاره كوي.
+*خورخه لوئیس بورخس يو لنډه كيسه د "د ابن رشد لټون" كې ليكي: چې دده په لټه كې د كاميډي او تراژيدۍ په لټۀ كې دى.
+*جیمز جویس په خپل مشهور كتاب [[اولیس]] كې ده ته په لنډ ډول اشاره كوي.
 *او شخصیت اصلی فیلم "سرنوشت" به کارگردانی یوسف شاهین است.
-*سیارکی در آسمان به نام او "۸۳۱۸ ابن رشد" نام‌گذاری شده است.
+*دده په نامه په اسمان كې يوه سياره "۸۳۱۸ ابن رشد" نومول شوې ده.
 
 ==مهم كتابونه يې: ==
  
