--- a/معتزله.mw
+++ b/معتزله.mw
@@ -209,6 +209,19 @@
 
 8- '''الهشامية''': أصحاب هشام بن عمرو الفوطي كان مبالغا في نفي [[القدر]]، وكان يمتنع من إطلاق إضافات أفعال إلى الباري الله وإن ورد بها التنزيل، منها قوله: أن الله لا يؤلف بين قلوب المؤمنين بل هم المؤتلفون باختيارهم، وقد ورد في التنزيل  "'''ما ألفت بين قلوبهم ولكن الله ألف بينهم"''' ، ومنها قوله :أن الله لا يحبب الإيمان إلى المؤمنين ولا يزينه في قلوبهم، وقد ذكر [[القرآن]] : "'''وحبب إليكم الإيمان وزينه في قلوبكم'''" ومن أقواله: أن الجنة والنار ليستا مخلوقتين الآن، وقال كذلك: أن النبوة جزاء على عمل وأنها باقية ما بقيت الدنيا.
 
+
+== معتزله او اهل سنت ==
+د سني دينپوهانو راى
+د فقهاو، محدثينو او معتزله ډلې ترمنځ ډېر سخت اختلافات منځته راغلل، چې ددې اختلافاتو په پايله كې ورو، ورو دا ډله له منځه ولاړه.
+امام محمد بن حسن الشيبآني دا فتوى وركړې وه، چې كه چېرې څوك د كوم معتزلي په امامت كوم لمونځ وكړي، نو د هغه لمونځ باطل دى، او لمونځ دې دويمځلي راوګرځوي.
+
+امام ابو يوسف رحمه الله چې د امام اعظم رحمه الله له ځانګړو زده كوونكيو څخه ګڼل كېږي، هغه د معتزله د زنديقيانو په ډله كې د ورګډولو فتوى وركړې.
+
+امام مالك رحمه الله عليه  په څېر ستر فقهي او محدث د معتزلي ګروهو لرونكې كس د ګواهۍ د منلو وړ نه بولي. معتزله و سره د مخالفت لرلو له وجې داسې فضا رامنځته شوه، چې دوي (معتزله و) به امام مالك په فاجر او فاسق ياداوه.
+
+حقيقت خبره خو دا ده، چې كه چېرې د چا خلاف بغض و عناد (كينه) يپدا شي، نو ښكاره خبره  ده، چې پدې كار سره منځلارتوب له منځه ځي. د دوښمن پر خلاف هره لار كارول كېداى شي، او په هغه وخت كې د حق و باط هېڅ پروا نه كېږي. زما شخصي رايه دا ده، چې د معتزله ډلې سره اكثره انصاف ندې شوې، او ددې كار بنسټيزه وجه تعصب و، او په تعصب كې دا ځانګړتيا موندل كېږي، چې دا (تعصب) په انساني عقل پرده اچوي.
+
+
 == بادينې تړون ==
 
 == دا هم وګورۍ ==
