--- a/معتزله.mw
+++ b/معتزله.mw
@@ -183,7 +183,7 @@
 ظهرت عدة محاولات لاحياء فكر المعتزلة في مواجهة التردي الذي تعيشه [[الأمة الاسلامية]]. ولكن معظم هذه المحاولات كانت تعاني من التأئر بالفكر الغربي. وبالتالي بدت هذه المحاولات وكأنها تلحق الحضارة الاسلامية بالحضاره الغربية. ولكن جهود الشيخ [[أمين نايف ذياب]] (1931-2006) أدت إلى بعث الاعتزال كفكر سياسي شعبي نابع من حضارة الاسلام.
 
 
-== فرق المعتزلة ==
+== د معتزله څخه بېلې شوې څانګې ==
 
 عادةً ما تبدأ الفرق في عددها وأفكارها صغيرة ثم ما تلبث أن تتشعب وتتفرق، فتصبح الفرقة فرقاً والشيعة شيعاً، وهكذا كان الحال مع المعتزلة فقد بدأت فرقة واحدة ذات مسائل محدودة، ثم ما لبثت أن زادت فرقها، وتكاثرت أقوالها وتشعبت، حتى غدت فرقا وأحزابا متعددة، ونحاول في هذا المبحث أن نذكر بعضا من تلك الفرق، ونقدم موجزاً تعريفياً بها وبمؤسسها، مع ذكر بعض أقوالها التي شذت بها عن أصحابها المعتزلة، فمن فرق المعتزلة: 
 
@@ -208,7 +208,6 @@
 7- '''الثمامية''': أصحاب [[ثمامة بن أشرس النميري]] (توفي سنة 213هـ)<ref name="الموسوعة الميسرة"/>  كان جامعا بين سخافة الدين وخلاعة النفس، انفرد عن أصحابه المعتزلة بمسائل منها قوله: في الكفار والمشركين والمجوس و[[اليهود]] و[[النصارى]] و[[الزنادقة]] و[[الدهرية]] أنهم يصيرون في القيامة ترابا، وكذلك قال: في البهائم والطيور وأطفال المؤمنين. 
 
 8- '''الهشامية''': أصحاب هشام بن عمرو الفوطي كان مبالغا في نفي [[القدر]]، وكان يمتنع من إطلاق إضافات أفعال إلى الباري الله وإن ورد بها التنزيل، منها قوله: أن الله لا يؤلف بين قلوب المؤمنين بل هم المؤتلفون باختيارهم، وقد ورد في التنزيل  "'''ما ألفت بين قلوبهم ولكن الله ألف بينهم"''' ، ومنها قوله :أن الله لا يحبب الإيمان إلى المؤمنين ولا يزينه في قلوبهم، وقد ذكر [[القرآن]] : "'''وحبب إليكم الإيمان وزينه في قلوبكم'''" ومن أقواله: أن الجنة والنار ليستا مخلوقتين الآن، وقال كذلك: أن النبوة جزاء على عمل وأنها باقية ما بقيت الدنيا.
-
 
 == معتزله او اهل سنت ==
 د سني دينپوهانو راى
