/* په معتزله د نومولو سبب */

--- a/معتزله.mw
+++ b/معتزله.mw
@@ -1,5 +1,12 @@
 '''معتزله''' يوه كلامي فرقه ده، چې د دويم هجري سپوږميزې پېړۍ په لومړيو كې د بصرې په ښار كې د واصل بن عطا پواسطه راپيدا شوه. ددې ډلې دبنسټ ډبره عقل دى، نو لدې وجې په خپلو ګروهو كې عقل ته ځانګړې ځاى وركوي. او د شرعي احكامو په حلونه كې له عقل څخه كار اخلي، ددوي په ګروهه لكه څرنګه چې وايي: عقل او روغ فطرت پدې توانېداى شي چې د حلالو او حرامو ترمنځ توپير وكړي. 
 
+په حقيقت كې د څښتن تعالى د يووالي په اړه معتزله ډلې ګروهه هماغه د مجسمه او مشبهه په څېر، چې د څښتن تعالى د شكل او جسم د ګروهې مننونكي ول، په څېر وه. د عدل اصل په جهميه باندې د تنقيد لپاره و، يانې د  جبر او اختيار په اړه يو پرېكنده موقف (وعد او وعيد) چې ددې له مخې د نېكۍ جزا او د بدۍ سزا ټاكل شوې.
+د لوى ګنا (كبيره ګناه) مرتكب د خوارجو په وړاندې كافر دى، معتزله ددې نظريې په رد كې يو نوې موقف وړاندې كړې، او هغه دا چې د اسلام او كفر ترمنځ يو بل منزل (ځاى) هم شته چې ددوي په ژبه ورته (المنزله بين المزلتين) وايي.
+د المقفع خراساني په نامه يو كس د عباسي خليفه (مهدي)_ په پير كې را ووت. دې د اروا په تناسخ (بيا راګرځېدنه) ګروهمن و. دې خراساني ډېرى خلك په خپله دې ګروهه بېلارې كړي ول، او پدې توګه يې ځانته ډله جوړه كړې وه. دده د اوسېدو ځاى (ماورا النهر) و.
+ددې ډلې د ماتولو لپاره مهدي ډېرو ستونزو سره مخ شو، د اريانۍ خبره خو لا ده وه، چې د مقنع خراساني د اغيز راكمولو لپاره مهدي د زنديقيانو سره توره هم پدې ونتوانېدل چې ددې ډلې ملا ماته كړي، او يا يې له منځه يوسي.
+
+معتزله يواځينۍ ډله وه چې د فساديانو مقابله يې په دېرې مېړانې وكړه، او د عقلي دلايلو په سمبالتيا يې نوموړې ډلې له منځه يوړه. د شك ټولې پردې يې له مخې لرې كړې او د هغوي بېلارې او رټل شوې څېرې يې خلكو ته راښكاره كړه، چې په پايله كې نن سبا ددې ډلې نوم و نښان هم پدې نړۍ نه ليدل كېږي.
+
 == په معتزله د نومولو سبب ==
 
 ددې ډلې د نومولو كيسه څه پدې ډول ده، چې يوه ورځ حسن بصري رحمه الله د درس كړۍ (حلقه) كې د لوى ګناه (كبيره ګنا) په اړه د زړه كوونكو پوښتنو ته ځوابونه وركول، چې په دې ډله زده كوونكيو كې يو هم [[واصل بن عطا]] ؤ، چې د لوى ګناه د مرتكب په اړه يې دا فك ښكاره كړ چې دې ( د لوى ګناه مرتكب) د ايمان او كفر ترمنځ يو منزل كې دى. كله چې دده دا فكر رد شو، نو له درسي حلقې څخه بېل او د جومات يوه كونج ته ولاړ، دده په ننګه يوه ډله زده كوونكي وربېل شول او دده ملاتړ يې وكړ. هركله چې حسن بصري دا حالت وليد، نو دا لنډه جمله يې وويله، چې (اعتزل عنّا)، يانې [[واصل بن عطا]] له موږ څخه بېلتون غوره كړ. نو د زياتره تاريخليكونكيو په وينا د معتزله نوم له همدې لنډې جملې څخه اخيستل شوې دى.
