--- a/يهوديت.mw
+++ b/يهوديت.mw
@@ -552,6 +552,7 @@ Text study projects at [[:s:Wikisource|Wikisource]]. In many instances, the Hebr
 [[als:Judentum]]
 [[an:Chudaísmo]]
 [[ar:يهودية]]
+[[az:Yəhudilik]]
 [[bar:Judntum]]
 [[be:Іудаізм]]
 [[be-x-old:Юдаізм]]
