--- a/سویلي_کوریا.mw
+++ b/سویلي_کوریا.mw
@@ -79,7 +79,7 @@ In English, the nation is often referred to simply as "Korea", deriving from the
 
 ==تاريخ==
 {{main|د کوريا تاريخ|د سوېلي کوريا تاريخ}}
-[[Image:Southkoreamap.png|thumb|200px|left|د سوېلي کوريا نخشه]]
+[[Image:Korea south map.png|thumb|200px|left|د سوېلي کوريا نخشه]]
 At the end of [[World War II]], [[United States|American]] and [[Soviet Union|Soviet]] troops occupied the southern and northern halves of Korea, respectively, dividing the peninsula at the [[38th parallel north|38th parallel]]. Despite promises of an independent and unified Korea in the 1943 [[Cairo Declaration]], the United States and Soviet Union helped establish two separate governments in 1948; the communist North and the capitalist South.
 
 On [[June 25]], [[1950]], the North invaded the South, instigating the [[Korean War]]. The [[United Nations]] backed South Korea and the [[Soviet Union]] and [[China]] backed North Korea, eventually reaching a stalemate.  The 1953 armistice split the peninsula along the [[Korean Demilitarized Zone|demilitarised zone]] at about the original demarcation line.  No peace treaty was ever signed, however, so the two countries are technically still at war.
