robot  Adding: [[bat-smg:Šėrdis]]

--- a/زړه.mw
+++ b/زړه.mw
@@ -120,6 +120,7 @@ This study shows how the heart contains thinking and memory skills, interacting 
 [[ar:قلب]]
 [[ay:Lluqu]]
 [[az:Ürək]]
+[[bat-smg:Šėrdis]]
 [[bg:Сърце]]
 [[bn:হৃৎপিন্ড]]
 [[bs:Srce]]
