--- a/چاپېريالپوهنه.mw
+++ b/چاپېريالپوهنه.mw
@@ -278,6 +278,7 @@ Some common examples of ecological crises are:
 [[lb:Ökologie]]
 [[lmo:Eculugía]]
 [[lt:Ekologija]]
+[[mg:Ekolojia]]
 [[mi:Mātauranga taupuhi kaiao]]
 [[mk:Екологија]]
 [[mn:Экологи]]
