*Empty MediaWiki Message*

--- a/عبدالحميد_بهيج.mw
+++ b/عبدالحميد_بهيج.mw
@@ -9,3 +9,10 @@
 #د یولسم ټولګي له پاره د مثلثات دتمرینونو حل
 #د یولسم ټولګی له پاره د ریاضي دتمرینونو حل
 #بهیج پښتوـ انګليسي قاموس (Bahij’s Pashto-English Dictionary)
+
+
+
+
+
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوالان]]
