*Empty MediaWiki Message*

--- a/عبدالحميد_بهيج.mw
+++ b/عبدالحميد_بهيج.mw
@@ -1,4 +1,9 @@
 [[انځور:Bahij.JPG|left|thumb|300px]]
+== زده کړې ==
+
+== دندې ==
+
+== چاپ شوي آثار ==
 تر اوسه ۱۴ کتابونه لیکلی چې له هغه ډلې څخه یواځې د چاپ شوهغو نومونه یادوم 
 #بهیج طبي سیند ( Bahij’s Medical Dictionary) :په ۲۰۰۰ ټوکه کې چاپ شوی طبی قاموس دی چې متن یې څه د پاسه ۱۲۰۰ مخونه لري .
 #بهیج سیاسي قاموس ( Bahij’s Political Dictionary) : په ۱۰۰۰ ټوکه کې چاپ شوی قاموس دي چې ۴۱۱ مخونه لري او د افغانستان دکولتور وزارت له اړخه دهیواد د خپلواکې د ۸۷ مې کلیزې په ویاړ په ترسره شوی کانکور کې د ادبي او فرهنګي څیړنو په برخه کې لومړۍ جایزه ترلاسه کړه .
