/* چاپ شوي آثار */

--- a/عبدالحميد_بهيج.mw
+++ b/عبدالحميد_بهيج.mw
@@ -15,7 +15,7 @@
 #د یولسم ټولګی له پاره د ریاضي دتمرینونو حل
 #بهیج پښتوـ انګليسي قاموس (Bahij’s Pashto-English Dictionary)
 
-
+== ناچاپه آثار ==
 
 
 
