/* د شیعه ګانو دولس امامان */

--- a/شيعه.mw
+++ b/شيعه.mw
@@ -15,6 +15,132 @@
 '''اهل سنت او جماعت دا ډله په رافضيانو باندې يادوي.''' 
 شيعه ګان پدې ګروهه دي، چې د دين واكې او تفسير او د مسلمانانو د  چارو واګي له پېغمبر څخه وروسته د هغه چا په لاس كې وي، چې د ځښتن تعالى له لورې ټاكل شوي وي، او د عصمت او عدالت د صفتونو لرونكي دي. دا ډله خلك د [[امام]] په نامه يادېږي. د شيعه ګانو لومړنې امام (د دوي په وېنا) علي كرم الله وجهه دى. د شعه ګانو د ګروهو له مخې محمد صلى الله عليه وسلم له خپلې مړينې څخه مخكې په كراتو مراتو د علي رضي الله عنه د ځاېناسستوب (جانشيني) په اړه صحابه ؤ ته ويلي ول.
 
+==ټېټ==
+
+=== شجرة الأئمة لدى طوائف الشيعة ===
+المخطط التالي يعرض أئمة طوائف الشيعة وأسمائهم، حيث لكل طائفة عدد معين من الأئمة.
+
+<div style="border: 1px solid; margin: 0; padding: 1em; height: 75em; overflow: auto;">
+{|border="0" cellpadding="&0" cellspacing="0"
+|------
+| || ||&nbsp;&nbsp;1||[[الامام علي بن أبي طالب|علي]] (661)  [[غيبة]] [[سبئية (فرقة)]] <ref>المقالات والفرق ص10-21 للقمي ، ورجال الكشي ص106-109 ، وتنقيح المقال للمامقاني ج2/84 </ref>
+|------
+| ||╗═══════════════════════||═══||╠ 
+|------
+| ||الحنفية (زوجة علي بن أبي طالب )|| ||[[فاطمة الزهراء|فاطمة]] (633)
+|------
+| ||│|| ||┤───────────────────────||───||┌
+|------
+|&nbsp;&nbsp;4||[[محمد بن الحنفية]] (700)||&nbsp;&nbsp;3||الامام [[الحسين]] (680)||&nbsp;&nbsp;2||ا [[الحسن]] (669)
+|------
+| ||│ [[غيبة]] '''[[كيسانية]]'''|| ||│ [[الواقفة على الحسين بن علي بن أبي طالب]] |||| عبد الله 
+|------
+| ||│ ||||│ ||||│ 
+|------
+| || عبد الله بن محمد بن الحنفية ||&nbsp;&nbsp;4||[[علي زين العابدين]] (712)|| || │
+|------
+| || [[الهاشمية(فرقة)]] ||||│ ||||│ 
+|------
+| ||┐───────────────────────||───||├ ||  || محمد (145هـ)
+|------
+|&nbsp;&nbsp;5||[[محمد الباقر]] (791)||&nbsp;&nbsp;5||زيد بن علي (740)|| ||[[غيبة]] [[المحمدية(فرقة)]]
+|------
+| ||│|| ||'''[[الزيدية]]'''
+|------
+|&nbsp;&nbsp;6||[[جعفر الصادق]] (765) 
+|------
+| ||│ [[غيبة]]  [[الناوسية]]
+|------
+| ||│ [[البزيغية]]
+|------
+| ||┤───────────────┐───────||───||──────┐─────────────────||───||┌
+|------
+|&nbsp;&nbsp;7||  [[موسى الكاظم]] (799).     &nbsp;&nbsp;7[[محمد بن جعفر الصادق]]||||&nbsp;&nbsp;7[[عبدالله بن جعفر الصادق]] (765) ||&nbsp;&nbsp;7||[[إسماعيل بن جعفر]] (760)
+|------
+| ||│'''[[غيبة]] [[الواقفية]]''' . .    ..  .  .  . .  . .  . [[غيبة]] [[السميطية]] || ||│'''[[الفطحية]]'''|| ||'''[[شيعة إسماعيلية]]'''
+|------
+|&nbsp;&nbsp;8||[[علي الرضا]] (818)|| ||[[محمد بن عبدالله بن جعفر الصادق]] || ||│
+|------
+| ||│|| || ||&nbsp;&nbsp;8||[[محمد المكتوم]](813)
+|------
+| ||│|| || || ||'''[[غيبة]]'''
+|------
+| ||│|| || || ||'''[[السبعية]]'''
+|------
+|&nbsp;&nbsp;9|| [[محمد الجواد]] (839)|| || || ||│
+|------
+| ||│|| || ||&nbsp;&nbsp;9||[[الوافي أحمد]](828)
+|------
+|&nbsp;10|| [[علي الهادي]] (868)|| || || ||│
+|------
+| ||┤───────────────┐───────||───||┌||&nbsp;10||[[التقي محمد]](840)
+|------
+|&nbsp;11||[[الحسن العسكري]] (874)  ......... [[جعفر بن علي الهادي]]||||[[محمد بن علي الهادي]] || ||│
+|------ 
+| ||│ [[غيبة]] [[الواقفية على الحسن العسكري]] || [[النفيسية]] || ||&nbsp;11||[[الزكي عبد الله]]  (881)
+|------ 
+| ||┤───────────────────────||───||┌ ||||│|| 
+|------
+|&nbsp;12||[[محمد المهدي]] (...)||&nbsp;12||[[ابن نصير]] من أصحاب العسكري || ||┤──────────┌
+|------
+| || [[الجنينيون]] || ||[[نصيرية|نصيرية أو علوية]]||&nbsp;12||[[عبيد الله المهدي]] (934)||
+|------
+| ||  [[غيبة]] [[الإثني عشرية]]  || || || ||[[فاطميين]]
+|------
+|  || [[الثلاث عشرية]] || || || ||│
+|------
+| || || || ||&nbsp;13||القيم(946)
+|------
+| || || || || ||│
+|------
+| || || || ||&nbsp;14||المنصور(952)
+|------
+| || || || || ||│
+|------
+| || || || ||&nbsp;15||المعز لدين الله(975)
+|------
+| || || || || ||│
+|------
+| || || || ||&nbsp;16||العزيز بالله(996)
+|------
+| || || || || ||│
+|------
+| || || || ||&nbsp;17||[[الحاكم بأمر الله]] (1021)
+|------
+| || || ||┐───────────────────────||───||├
+|------
+| || || ||[[غيبة]]||&nbsp;18||الظاهر علي(1036)
+|------
+| || || ||'''[[درزية|دروز]]'''|| ||│
+|------
+| || || || ||&nbsp;19||المستنير بالله (1094)
+|------
+| || || ||┐───────────────────────||───||├
+|------
+| || ||&nbsp;20||نزار||&nbsp;20||المستعلي بالله(1101)
+|------
+| || || ||'''[[نزارية]]'''|| ||'''[[مستعلية]]'''
+|------
+| || || ||│|| ||│
+|------
+| || ||&nbsp;21||الهادي||&nbsp;21||الآمر (1130)
+|------
+| || || ||│|| ||│
+|------
+| || ||&nbsp;22||المهتدي||&nbsp;22||الطيب أبي القاسم(1142)
+|------
+| || || ||│|| ||[[غيبة]]
+|------
+| || ||&nbsp;23||الذكري سلام
+|------
+| || || ||│
+|------
+| || || ||إلخ
+|}
+</div>
+
+
+
 == د شیعه ګانو دولس امامان ==
 د شيعه ګانو هغه ډله چې په دولس امامانو ګروهه لري د دولس امامي شيعه ګانو  (شيعه اثنا عشريه) په نامه يادېږي. ددې  شيعه ګانو په وړاند لاندې لړۍ د دوي دولس امامان دي.
 #[[علی بن ابوطالب رضي الله عنه]]
