--- a/شيعه.mw
+++ b/شيعه.mw
@@ -15,9 +15,8 @@
 '''اهل سنت او جماعت دا ډله په رافضيانو باندې يادوي.''' 
 شيعه ګان پدې ګروهه دي، چې د دين واكې او تفسير او د مسلمانانو د  چارو واګي له پېغمبر څخه وروسته د هغه چا په لاس كې وي، چې د ځښتن تعالى له لورې ټاكل شوي وي، او د عصمت او عدالت د صفتونو لرونكي دي. دا ډله خلك د [[امام]] په نامه يادېږي. د شيعه ګانو لومړنې امام (د دوي په وېنا) علي كرم الله وجهه دى. د شعه ګانو د ګروهو له مخې محمد صلى الله عليه وسلم له خپلې مړينې څخه مخكې په كراتو مراتو د علي رضي الله عنه د ځاېناسستوب (جانشيني) په اړه صحابه ؤ ته ويلي ول.
 
-==ټېټ==
+===د شيعه ډلو امامان===
 
-=== شجرة الأئمة لدى طوائف الشيعة ===
 المخطط التالي يعرض أئمة طوائف الشيعة وأسمائهم، حيث لكل طائفة عدد معين من الأئمة.
 
 <div style="border: 1px solid; margin: 0; padding: 1em; height: 75em; overflow: auto;">
@@ -138,8 +137,6 @@
 | || || ||إلخ
 |}
 </div>
-
-
 
 == د شیعه ګانو دولس امامان ==
 د شيعه ګانو هغه ډله چې په دولس امامانو ګروهه لري د دولس امامي شيعه ګانو  (شيعه اثنا عشريه) په نامه يادېږي. ددې  شيعه ګانو په وړاند لاندې لړۍ د دوي دولس امامان دي.
