The file [[:Image:Coa_cambodia.jpg]] has been removed, as it has been deleted by [[:commons:User:Maxim]]: ''Deleted because "Missing license/permission/source information". using [[w:commons:COM:TW|TW]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/کمبودیا.mw
+++ b/کمبودیا.mw
@@ -3,7 +3,7 @@
 اصلي نوم = [[Image:Official_name_of_Cambodia.png]]<br> Preăh Réachéanachâkr Kâmpŭchea |
 عام نوم = Cambodia |
 بېرغ = Flag of Cambodia.svg |
-نښان = Coa cambodia.jpg |
+نښان = |
 نخشه = LocationCambodia.png |
 national_motto = [[Image:Kh-Motto.png|170px]]<br>(Khmer: Nation, Religion, King) |
 ملي سرود = [[Nokoreach]] |
